made first server longer